--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "tap test.js",
-    "start": "node ./index.js"
+    "start": "node ./index.js",
+    "lint": "eslint ./index.js --fix"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,14 @@
   "homepage": "https://github.com/collintime/blabby#readme",
   "dependencies": {
     "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.14.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "tap": "^12.5.3"
   }
 }
